kubernetes/dashboard/ingress.yaml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: kubernetes-dashboard
#   namespace: kubernetes-dashboard
# spec:
#   rules:
#     - host: dashboard.sarafu.network
#       http:
#         paths:
#           - backend:
#               serviceName: kubernetes-dashboard
#               servicePort: 443

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - k8s.sarafu.network
  rules:
    - host: k8s.sarafu.network
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
